--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.3
+  sqflite: ^0.12.1
+  # flutter preferences 磁盘提供
+  shared_preferences: ^0.4.3
+  # App 目录提供
+  path_provider: ^0.4.1
+  json_annotation: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 
 # For information on the generic Dart part of this file, see the
